--- a/templates/sentry-formation.yaml.erb
+++ b/templates/sentry-formation.yaml.erb
@@ -1,4 +1,4 @@
-Description: A Sentry stack for AWS
+Description: <%= @Description %>
 Parameters:
 
   #### Required ####
@@ -68,34 +68,26 @@ Parameters:
     Description: VPC Cidr block
     Default: 10.0.0.0/22
     Type: String
-  VpcAvailabilityZone1:
-    Description: The AvailabilityZone to use for the first subnet
+<% for @num in 1..@availability_zones -%>
+  VpcAvailabilityZone<%= @num %>:
+    Description: The AvailabilityZone to use for subnet <%= @num %>
     Type: AWS::EC2::AvailabilityZone::Name
-    Default: eu-west-1a
-  VpcAvailabilityZone2:
-    Description: The AvailabilityZone to use for the second subnet
-    Type: AWS::EC2::AvailabilityZone::Name
-    Default: eu-west-1b
-  VpcPublicSubnetCIDR1:
+    Default: eu-west-1<%= (@num + 96).chr %>
+<% end -%>
+<% for @num in 1..@availability_zones -%>
+  VpcPublicSubnetCIDR<%= @num %>:
     AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
-    Default: 10.0.0.0/26
-    Description: VPC CIDR Block for the Public Subnet
+    Default: 10.0.<%= ((@num - 1) / 2).floor  %>.<%= (@num - 1) * 64 % 128  %>/26
+    Description: VPC CIDR Block for Public Subnet <%= @num %>
     Type: String
-  VpcPublicSubnetCIDR2:
+<% end -%>
+<% for @num in 1..@availability_zones -%>
+  VpcPrivateSubnetCIDR<%= @num %>:
     AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
-    Default: 10.0.0.64/26
-    Description: VPC CIDR Block for the Public Subnet
+    Default: 10.0.<%= ((@num + 3) / 2).floor  %>.<%= (@num - 1) * 64 % 128  %>/26
+    Description: VPC CIDR Block for Private Subnet <%= @num %>
     Type: String
-  VpcPrivateSubnetCIDR1:
-    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
-    Default: 10.0.1.0/26
-    Description: VPC CIDR Block for the Private Subnet
-    Type: String
-  VpcPrivateSubnetCIDR2:
-    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
-    Default: 10.0.1.64/26
-    Description: VPC CIDR Block for the Private Subnet
-    Type: String
+<% end -%>
   ImageId:
     Description: The AMI to use for this Sentry - YUM compliant required
     Type: String
@@ -123,7 +115,7 @@ Parameters:
     Default: db.t2.small
   DBMultiAZ:
     Type: String
-    Default: true
+    Default: <%= @availability_zones > 1 %>
     Description: Provides enhanced availablily for RDS
   DBStorageType:
     Type: String
@@ -169,61 +161,37 @@ Resources:
           Value:
             Ref: AWS::StackName
 
-  PublicSubnet1:
+<% for @num in 1..@availability_zones -%>
+  PublicSubnet<%= @num %>:
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: {Ref: VpcAvailabilityZone1}
-      CidrBlock: {Ref: VpcPublicSubnetCIDR1}
+      AvailabilityZone: {Ref: VpcAvailabilityZone<%= @num %>}
+      CidrBlock: {Ref: VpcPublicSubnetCIDR<%= @num %>}
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
           Value:
             Fn::Join:
               - '-'
-              - [{Ref: 'AWS::StackName'}, 'public', {Ref: VpcAvailabilityZone2}]
+              - [{Ref: 'AWS::StackName'}, 'public', {Ref: VpcAvailabilityZone<%= @num %>}]
       VpcId: {Ref: VPC}
+<% end -%>
 
-  PublicSubnet2:
+<% for @num in 1..@availability_zones -%>
+  PrivateSubnet<%= @num %>:
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: {Ref: VpcAvailabilityZone2}
-      CidrBlock: {Ref: VpcPublicSubnetCIDR2}
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value:
-            Fn::Join:
-              - '-'
-              - [{Ref: 'AWS::StackName'}, 'public', {Ref: VpcAvailabilityZone2}]
-      VpcId: {Ref: VPC}
-
-  PrivateSubnet1:
-    Type: AWS::EC2::Subnet
-    Properties:
-      AvailabilityZone: {Ref: VpcAvailabilityZone1}
-      CidrBlock: {Ref: VpcPrivateSubnetCIDR1}
+      AvailabilityZone: {Ref: VpcAvailabilityZone<%= @num %>}
+      CidrBlock: {Ref: VpcPrivateSubnetCIDR<%= @num %>}
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
           Value:
             Fn::Join:
               - '-'
-              - [{Ref: 'AWS::StackName'}, 'private', {Ref: VpcAvailabilityZone2}]
+              - [{Ref: 'AWS::StackName'}, 'private', {Ref: VpcAvailabilityZone<%= @num %>}]
       VpcId: {Ref: VPC}
-
-  PrivateSubnet2:
-    Type: AWS::EC2::Subnet
-    Properties:
-      AvailabilityZone: {Ref: VpcAvailabilityZone2}
-      CidrBlock: {Ref: VpcPrivateSubnetCIDR2}
-      MapPublicIpOnLaunch: false
-      Tags:
-        - Key: Name
-          Value:
-            Fn::Join:
-              - '-'
-              - [{Ref: 'AWS::StackName'}, 'private', {Ref: VpcAvailabilityZone2}]
-      VpcId: {Ref: VPC}
+<% end -%>
 
   InternetGateway:
     Type: AWS::EC2::InternetGateway
@@ -263,24 +231,19 @@ Resources:
       RouteTableId:
         Ref: PublicRouteTable
 
-  PublicSubnetAssoc1:
+<% for @num in 1..@availability_zones -%>
+  PublicSubnetAssoc<%= @num %>:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId:
         Ref: PublicRouteTable
       SubnetId:
-        Ref: PublicSubnet1
-
-  PublicSubnetAssoc2:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId:
-        Ref: PublicRouteTable
-      SubnetId:
-        Ref: PublicSubnet2
+        Ref: PublicSubnet<%= @num %>
+<% end -%>
 
   ###### Private Routing ######
-  PrivateRouteTable1:
+<% for @num in 1..@availability_zones -%>
+  PrivateRouteTable<%= @num %>:
     Type: AWS::EC2::RouteTable
     Properties:
       Tags:
@@ -288,87 +251,43 @@ Resources:
           Value:
             Fn::Join:
               - '-'
-              - [{Ref: 'AWS::StackName'}, 'private-1']
+              - [{Ref: 'AWS::StackName'}, 'private-<%= @num %>']
       VpcId:
         Ref: VPC
 
-  PrivateSubnetAssoc1:
+  PrivateSubnetAssoc<%= @num %>:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId:
-        Ref: PrivateRouteTable1
+        Ref: PrivateRouteTable<%= @num %>
       SubnetId:
-        Ref: PrivateSubnet1
+        Ref: PrivateSubnet<%= @num %>
 
-  EIP1:
+  EIP<%= @num %>:
     Type: AWS::EC2::EIP
     Properties:
       Domain: vpc
 
-  NAT1:
+  NAT<%= @num %>:
     DependsOn: GatewayAttachment
     Type: AWS::EC2::NatGateway
     Properties:
       AllocationId:
         Fn::GetAtt:
-        - EIP1
+        - EIP<%= @num %>
         - AllocationId
       SubnetId:
-        Ref: PublicSubnet1
+        Ref: PublicSubnet<%= @num %>
 
-  NATRoute1:
+  NATRoute<%= @num %>:
     Type: AWS::EC2::Route
     Properties:
       RouteTableId:
-        Ref: PrivateRouteTable1
+        Ref: PrivateRouteTable<%= @num %>
       DestinationCidrBlock: 0.0.0.0/0
       NatGatewayId:
-        Ref: NAT1
-
-  PrivateRouteTable2:
-    Type: AWS::EC2::RouteTable
-    Properties:
-      Tags:
-        - Key: Name
-          Value:
-            Fn::Join:
-              - '-'
-              - [{Ref: 'AWS::StackName'}, 'private-2']
-      VpcId:
-        Ref: VPC
-
-  PrivateSubnetAssoc2:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId:
-        Ref: PrivateRouteTable2
-      SubnetId:
-        Ref: PrivateSubnet2
-
-  EIP2:
-    Type: AWS::EC2::EIP
-    Properties:
-      Domain: vpc
-
-  NAT2:
-    DependsOn: GatewayAttachment
-    Type: AWS::EC2::NatGateway
-    Properties:
-      AllocationId:
-        Fn::GetAtt:
-        - EIP2
-        - AllocationId
-      SubnetId:
-        Ref: PublicSubnet2
-
-  NATRoute2:
-    Type: AWS::EC2::Route
-    Properties:
-      RouteTableId:
-        Ref: PrivateRouteTable2
-      DestinationCidrBlock: 0.0.0.0/0
-      NatGatewayId:
-        Ref: NAT2
+        Ref: NAT<%= @num %>
+<% end -%>
 
   ###### Roles ######
 
@@ -620,8 +539,9 @@ Resources:
     Properties:
       Description: Sentry stack redis subnet group
       SubnetIds:
-        - Ref: PrivateSubnet1
-        - Ref: PrivateSubnet2
+<% for @num in 1..@availability_zones -%>
+        - Ref: PrivateSubnet<%= @num %>
+<% end -%>
 
   RedisCacheCluster:
     Type: AWS::ElastiCache::CacheCluster
@@ -676,8 +596,9 @@ Resources:
     Properties:
       DBSubnetGroupDescription: Sentry stack postgres subnet group
       SubnetIds:
-        - Ref: PrivateSubnet1
-        - Ref: PrivateSubnet2
+<% for @num in 1..@availability_zones -%>
+        - Ref: PrivateSubnet<%= @num %>
+<% end -%>
 
   PostgresInstance:
     Type: AWS::RDS::DBInstance
@@ -752,8 +673,9 @@ Resources:
     Type: AWS::ElasticLoadBalancing::LoadBalancer
     Properties:
       Subnets:
-        - Ref: PublicSubnet1
-        - Ref: PublicSubnet2
+<% for @num in 1..@availability_zones -%>
+        - Ref: PublicSubnet<%= @num %>
+<% end -%>
       Listeners:
       - InstancePort: '443'
         Protocol: HTTPS
@@ -926,8 +848,9 @@ Resources:
         Value:
           Ref: AWS::StackName
       VPCZoneIdentifier:
-        - Ref: PrivateSubnet1
-        - Ref: PrivateSubnet2
+<% for @num in 1..@availability_zones -%>
+        - Ref: PrivateSubnet<%= @num %>
+<% end -%>
 
   SentryScalingPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
