Feedback from review
- Upgrade ruby version.
- Use Ruby Bundler.
- De-duplicate lono config.
- Remove public ingress load balancer rules when internal.

--- a/templates/sentry-formation.yaml.erb
+++ b/templates/sentry-formation.yaml.erb
@@ -649,6 +649,7 @@ Resources:
   LoadBalancerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
+<% if @visibility === "internet-facing" -%>
       SecurityGroupIngress:
       - ToPort: '443'
         IpProtocol: tcp
@@ -658,6 +659,7 @@ Resources:
         IpProtocol: tcp
         FromPort: '443'
         CidrIpv6: ::/0
+<% end -%>
       VpcId:
         Ref: VPC
       GroupDescription: An ELB group allowing access only to from the corresponding
